# transcoda

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  TODO.md  pretrain_fcmae.sh  pyproject.toml  setup.sh  train.py  train.sh
binaries/accumulating_rhythm/: Cargo.toml
binaries/rhythm_checker/: Cargo.toml  README.md  err.txt
binaries/rhythm_checker/src/: duration.rs  error.rs  lib.rs  main.rs  parser.rs  repeat.rs  spine.rs  time_signature.rs  validator.rs
binaries/spine_checker/: Cargo.toml  README.md
config/: README.md  data_spec.json  debug.json  finetune_polish_adapt_mixed.json  finetune_polish_adapt_real_only.json  finetune_real.json  pretrain_fcmae_base.json  profile.json  train.json
docs/: FCMAE_PRETRAINING_QUICKSTART.md  MODEL_ARCHITECTURE.md  TRAINING_AND_DATA.md  fcmae-pretraining-lr-notes.md  model_size.md
docs/guides/: loop-degeneration-diagnostics.md  profiling_dataset_generation.md
docs/ideas/: ctc-auxiliary-loss-implementation.md  unlikelihood-training-implementation.md
docs/plans/: fcmae-convnextv2-base-pretraining.md  fcmae-pretraining-v2-operationalization.md  truncation-safe-boundary-binary-search.md
grammars/: kern.gbnf
notebooks/: README.md  dataset_viewer.py  polish_manual_fixes.ipynb  polish_manual_fixes.py  run_histogram_viewer.py  seq_length_viewer.py  single_sample_viewer.ipynb  synthetic_generator_explorer.ipynb  test_augraphy_simple.ipynb  test_kern_augmentation.ipynb  train_set_viewer.ipynb  val_set_viewer.ipynb
scripts/: deploy.sh  download_wandb_run_bundle.py  export_fcmae_encoder.py  export_wandb_validation_table.py  generate_fcmae_manifests.py  generate_neurips_pipeline_images.py  inference.py  pretrain_fcmae.py  runpod_bootstrap_benchmark.sh
scripts/benchmark/: README.md  __init__.py  compute_tedn.py  run.py  submit_slurm.sh
scripts/dataset_generation/: __init__.py  assemble_mixed_train_dataset.py  (+17 more)
src/: artifacts.py  config.py  metrics_schema.py  tokenizer_compat.py
tests/: __init__.py  conftest.py  test_artifacts_slurm.py  test_data_sample_ids.py  test_fcmae_export.py  test_fcmae_smoke.py  test_fcmae_wandb_config.py  test_generator.py  test_kern_ops.py  test_kern_postprocess.py  test_metrics_ser.py  test_omr_ned_tracker.py  test_remove_bar_from_end.py  test_spine_state.py  test_token_decoding.py  test_tokenizer_whitespace.py  test_train_sh_validate_checkpoint_autoresolve.py
vocab/: bpe3k-splitspaces-tokenizer.json  grandstaff-ekern-tokenizer.json  grandstaff-kern-tokenizer.json
(+579 files in other folders)
