[package]
name = "rhythm_checker"
version = "0.1.0"
edition = "2021"
description = "Validates rhythm correctness in Humdrum **kern files"

[dependencies]
num-rational = "0.4"
clap = { version = "4", features = ["derive"] }
rayon = "1.8"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"

[dev-dependencies]
proptest = "1"
